xrpl-common-stdlib/tests/decoder/fail_tx_only_missing_from_ledger.stderr
error[E0277]: `TxOnly` cannot be read from a ledger object
  --> tests/decoder/fail_tx_only_missing_from_ledger.rs:26:28
   |
26 |     requires_from_ledger::<TxOnly>();
   |                            ^^^^^^ the trait `FromLedger` is not implemented for `TxOnly`
   |
   = note: array/object fields can't be decoded directly. Navigate into them with a locator (`.field(sfield::X)...`) or use a typed accessor
   = help: the following other types implement trait `FromLedger`:
             AccountID
             Amount
             Blob<N>
             Currency
             Issue
             UInt<xrpl_common_stdlib::::types::uint::UInt128::{constant#0}>
             UInt<xrpl_common_stdlib::::types::uint::UInt160::{constant#0}>
             UInt<xrpl_common_stdlib::::types::uint::UInt192::{constant#0}>
           and $N others
note: required by a bound in `requires_from_ledger`
  --> tests/decoder/fail_tx_only_missing_from_ledger.rs:23:28
   |
23 | fn requires_from_ledger<T: FromLedger>() {}
   |                            ^^^^^^^^^^ required by this bound in `requires_from_ledger`
